// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Panel snapshot does not render radio buttons 1`] = `
<div>
  <WithStyles(Component)
    configuration={
      Object {
        "editChoiceLabel": false,
        "orientationLabel": "Orientation",
        "settingsOrientation": true,
      }
    }
    group={
      Object {
        "choiceAreaLayout": false,
        "editChoiceLabel": Object {
          "isConfigProperty": true,
          "label": "Edit choice label",
          "type": "toggle",
        },
      }
    }
    key="Group 1"
    label="Group 1"
    model={
      Object {
        "choiceAreaLayout": "vertical",
      }
    }
    onChange={[Function]}
  />
</div>
`;

exports[`Settings Panel snapshot renders 1`] = `
<div>
  <WithStyles(Component)
    configuration={
      Object {
        "editChoiceLabel": false,
        "orientationLabel": "Orientation",
        "settingsOrientation": true,
      }
    }
    group={
      Object {
        "choiceAreaLayout": Object {
          "choices": Array [
            Object {
              "label": "opt1",
              "value": "opt1",
            },
            Object {
              "label": "opt2",
              "value": "opt2",
            },
          ],
          "label": "Orientation",
          "type": "radio",
        },
        "editChoiceLabel": Object {
          "isConfigProperty": true,
          "label": "Edit choice label",
          "type": "toggle",
        },
      }
    }
    key="Group 1"
    label="Group 1"
    model={
      Object {
        "choiceAreaLayout": "vertical",
      }
    }
    onChange={[Function]}
  />
</div>
`;
